Corregido metodo para añadir ingrediente nuevo, y corregida pantalla para añadir stock de un ingrediente